# RubiksCubeOld

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bundle.cmake  config.txt  setup.bat  setup.py  setup.sh
include/: color_object.hpp  common.hpp  cube.hpp  gui.hpp  piece.hpp
src/: color_object.cpp  cube.cpp  gui.cpp  main.cpp  piece.cpp
